fixed alignment of elements on mobile

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     width:100%;
     margin:0;
 
@@ -16,17 +16,23 @@ body {
     background-size:cover;
 }
 
+#main {
+  height:100%;
+}
 #page-1 {
-  text-align:center;
+  text-align:center;  
+  height: 100%; 
 }
 .container{
     margin:0;
     height:100%;
+}.container-fluid{
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .vertical-center {
-    min-height: 100%;
-    min-height: 100vh; 
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,9 +102,9 @@ h1, h2, h3,p {
 
 .left-nav {
     float:left;
-    height:100vh;
-    overflow: auto;
-  position: relative;
+    height:750px;
+    overflow:hidden;
+    position: relative;
 }
 
 .cover {
@@ -113,9 +119,7 @@ h1, h2, h3,p {
   position:relative;
 }
 #nav-links.left-nav {
-    
   float:left;
-  height:100vh;
 }
 .text-right {
     float:right;
@@ -128,7 +132,7 @@ h1, h2, h3,p {
 /* The side navigation menu */
 .sidenav {
   text-align:left;
-    height: 100%; /* 100% Full-height */
+    height: 100vh; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
@@ -138,6 +142,7 @@ h1, h2, h3,p {
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    
   }
   .sidenav {
     right: 0;
@@ -219,6 +224,6 @@ h1, h2, h3,p {
 }
 
 
-#encycle {
+#left-align {
   margin-left:195px;
 }
